--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <noscript>
@@ -23,6 +29,7 @@
     <div id="root"></div>
 
     <script type="application/json" id="__JSS_STATE__">null</script>
+
 
     <!--
       This HTML file is a template.
